--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.2",
     "react-syntax-highlighter": "^15.5.0",
