--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "date-fns": "^2.30.0",
     "editorjs-blocks-react-renderer": "^1.3.0",
     "eslint": "8.47.0",
